ensure entire instance menu is visible at bottom of page

--- a/eucaconsole/static/sass/pages/instances.scss
+++ b/eucaconsole/static/sass/pages/instances.scss
@@ -51,5 +51,5 @@ $instance-tile-height-adjustment: 24px;
 }
 
 #maincontent {
-    padding-bottom: 8rem;
+    padding-bottom: 9.0rem;
 }
